--- a/Loan Calculator/index.html
+++ b/Loan Calculator/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Hello, world!</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -11,27 +12,28 @@
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
+      integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
       crossorigin="anonymous"
     />
-
-    <title>Hello, world!</title>
+    <!-- Style To hide Both -->
+    <style>
+      #loading,
+      #results {
+        display: none;
+      }
+    </style>
   </head>
   <body class="bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-md-6 mx-auto">
           <div class="card card-body text-center mt-5">
-            <h1 class="heading display-5 pb-3">
-              Loan Calculator
-            </h1>
-            <form class="loan-form">
+            <h1 class="heading display-5 pb-3">Loan Calculator</h1>
+            <form id="loan-form">
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">$</span>
-                  </div>
+                  <span class="input-group-addon">$</span>
                   <input
                     type="number"
                     class="form-control"
@@ -42,13 +44,11 @@
               </div>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">%</span>
-                  </div>
+                  <span class="input-group-addon">%</span>
                   <input
                     type="number"
                     class="form-control"
-                    id="Interest"
+                    id="interest"
                     placeholder="Interest"
                   />
                 </div>
@@ -64,23 +64,23 @@
               <div class="form-group">
                 <input
                   type="submit"
-                  value="Calculator"
+                  value="Calculate"
                   class="btn btn-dark btn-block"
                 />
               </div>
             </form>
-            <!-- Loader Here -->
-            <!-- <div id="loading">
-              <img src="img/loading.gif" />
-            </div> -->
-            <!-- Results -->
+            <!-- LOADER -->
+
+            <div id="loading">
+              <img src="img/loading.gif" alt="" />
+            </div>
+
+            <!-- RESULTS -->
             <div id="results" class="pt-4">
               <h5>Results</h5>
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">Monthly Payment</span>
-                  </div>
+                  <span class="input-group-addon">Monthly Payment</span>
                   <input
                     type="number"
                     class="form-control"
@@ -89,11 +89,10 @@
                   />
                 </div>
               </div>
+
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">Toatal Payment</span>
-                  </div>
+                  <span class="input-group-addon">Total Payment</span>
                   <input
                     type="number"
                     class="form-control"
@@ -102,11 +101,10 @@
                   />
                 </div>
               </div>
+
               <div class="form-group">
                 <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text">Total Interest</span>
-                  </div>
+                  <span class="input-group-addon">Total Interest</span>
                   <input
                     type="number"
                     class="form-control"
@@ -115,28 +113,29 @@
                   />
                 </div>
               </div>
-              >
             </div>
           </div>
         </div>
       </div>
     </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
+      integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
+      integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js"></script>
   </body>
 </html>
