--- a/API Projects/Weather Application/index.html
+++ b/API Projects/Weather Application/index.html
@@ -15,15 +15,15 @@
         <!-- used rounded for rounded corner -->
         <div class="col-md-6 mx-auto text-center bg-primary mt-5 p-5 rounded">
           <h1 id="w-location"></h1>
-          <h3 class="text-dark" id="w-desc"></h3>
+          <h1 id="w-city"></h1>
+          <h3 class="text-dark" id="w-city_id"></h3>
           <h3 id="w-string"></h3>
 
-          <img src="" id="w-icon" />
           <ul class="list-group mt-3" id="w-details">
             <li class="list-group-item" id="w-humadity"></li>
-            <li class="list-group-item" id="w-dewpoint"></li>
+            <li class="list-group-item" id="w-windspeed"></li>
             <li class="list-group-item" id="w-feels-like"></li>
-            <li class="list-group-item" id="w-wind"></li>
+            <li class="list-group-item" id="w-pressure"></li>
           </ul>
           <hr />
           <button
